tests/NormalTests/paczka2/big_fuzzy/19027368.err
Error in line 12: 5FofDv A15 42,3
Error in line 20: 5FofDv A349 26,5
Error in line 24: i08sogxi A970 9,2
Error in line 18: 5igl A349 78,9
Error in line 45: MLs9RB0 A349 48,5
Error in line 47: MLs9RB0 A15 42,3
Error in line 27: i08sogxi A15 46,3
Error in line 49: 0zyRyOuRatn A970 179,9
Error in line 50: i08sogxi A349 28,7
Error in line 60: 0zyRyOuRatn S21 10,7
Error in line 61: S21 A349 171,2
Error in line 68: 0zyRyOuRatn A349 57,9
Error in line 72: S21 A970 98,3
Error in line 83: 5FofDv S21 10,6
Error in line 104: i08sogxi A15 128,8
Error in line 105: S21 A970 39,9
Error in line 102: Way1 A349 64,3
Error in line 106: i08sogxi A970 30,7
Error in line 108: S21 S21 85,4
Error in line 110: 5FofDv A970 36,2
Error in line 118: 5FofDv A15 26,0
Error in line 129: Way1 A15 92,1
Error in line 113: S21 A15 73,6
Error in line 142: i08sogxi S21 73,7
Error in line 152: i08sogxi A349 46,54
Error in line 145: MLs9RB0 A970 147,2
Error in line 154: MLs9RB0 S21 88,5
Error in line 151: i08sogxi A349 60,3
Error in line 161: 0zyRyOuRatn A349 69,0
Error in line 163: 5igl A970 34,8
Error in line 141: S21 S21 27,6
Error in line 173: 5igl A349 0,6
Error in line 200: 5igl A15 91,0
Error in line 186: 0zyRyOuRatn A349 238,8
Error in line 185: S21 A15 57,9
Error in line 214: 0zyRyOuRatn A970 -1,5
Error in line 204: 0zyRyOuRatn A970 8,6
Error in line 222: S21 S21 -2,1
Error in line 220: MLs9RB0 A970 53,5
Error in line 224: MLs9RB0 A15 64,6
Error in line 219: i08sogxi S21 35,7
Error in line 232: 5FofDv A349 79,2
Error in line 234: 5FofDv A15 95,6
Error in line 240: 5FofDv S21 96,5
Error in line 242: MLs9RB0 A349 20,7
